[package]
name = "parrot_ar_drone"
version = "0.1.0"
authors = ["VaranTavers <tasnadi98@freemail.hu>"]
edition = "2018"
license = "GPL-3.0-or-later"
keywords = ["ar-drone", "drone", "parrot"]
documentation = "TDB"
homepage = "https://github.com/VaranTavers/parrot_ar_drone"
repository = "https://github.com/VaranTavers/parrot_ar_drone"
description = "This is a Rust API to control Parrot AR Drone 2.0."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer = "^0.2.0"
chrono = "^0.4.10"
byteorder = "^1.3.2"
